--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 </div>
             </form>
         </div>
+        <div class="review_page hide">
+            <h1 class="reviewContent">Your Item is successfully Ordered...</h1>
+        </div>
     </div>
     <script src="./js/script.js"></script>
 </body>
