only third and fourth step is rest

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                     </div>
                 </div>
                 <div class="addMore">
-                    <button><i class="fa fa-plus" aria-hidden="true"></i></button>
+                    <input type="button" class="addMore_btn">
+                    <i class="fa fa-plus" aria-hidden="true"></i>    
                 </div>
                 <div class="third_page_btns">
                     <input type="button" value="Previous" class="thirdPrevBtn">
