expect review button almost complete

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="sameSelect">
                     <div class="box_one">
                         <label for="selectDish">Please Select a Dish</label>
-                        <select name="dishSelect" id="selectDish">       
+                        <select name="dishSelect" id="selectDish" class="checkLastClass">       
                         </select>
                     </div>
                     <div class="box_two">
@@ -66,8 +66,51 @@
             </form>
         </div>
         <div class="last_page hide">
+            <table>
+                <tr>
+                    <td>Meal</td>
+                    <td>Lunch</td>
+                </tr>
+                <tr>
+                    <td>No. of People</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>Restaurant</td>
+                    <td>A</td>
+                </tr>
+            </table>
+            <div class="specials_border">
+                <div class="same_data">
+                    Dishes
+                </div>
+                <div class="second_col">
+                    <div class="same_data">
+                        <div class="same_box">Ashish</div>
+                        <div class="same_box">Ashish</div>
+                    </div>
+                    <div class="same_data">
+                        <div class="same_box">Ashish</div>
+                        <div class="same_box">Ashish</div>
+                    </div>
+                    <div class="same_data">
+                        <div class="same_box">Ashish</div>
+                        <div class="same_box">Ashish</div>
+                    </div>
+                    <div class="same_data">
+                        <div class="same_box">Ashish</div>
+                        <div class="same_box">Ashish</div>
+                    </div>
+                    <div class="same_data">
+                        <div class="same_box">Ashish</div>
+                        <div class="same_box">Ashish</div>
+                    </div>
+                </div>
+           </div>
             <form action="">
                 <div class="last_page_btns">
+                    <!-- data presentation -->
+                    
                     <input type="button" value="Previous" class="lastPrevBtn">
                     <input type="button" value="Next" class="lastNextBtn">
                 </div>
