--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="box_two">
                         <label for="selectSer">Please Enter No of Servings</label>
-                        <input type="number" name="serSelect" id="selectSer"> 
+                        <input type="number" name="serSelect" id="selectSer" class="selectSers"> 
                     </div>
                     <br>
                 </div>
@@ -69,15 +69,15 @@
             <table>
                 <tr>
                     <td>Meal</td>
-                    <td>Lunch</td>
+                    <td class="putMeal"></td>
                 </tr>
                 <tr>
                     <td>No. of People</td>
-                    <td>3</td>
+                    <td class="putNoPeople"></td>
                 </tr>
                 <tr>
                     <td>Restaurant</td>
-                    <td>A</td>
+                    <td class="putRest"></td>
                 </tr>
             </table>
             <div class="specials_border">
@@ -86,24 +86,32 @@
                 </div>
                 <div class="second_col">
                     <div class="same_data">
-                        <div class="same_box">Ashish</div>
-                        <div class="same_box">Ashish</div>
+                        <div class="same_box putDishName"></div>
+                        <div class="same_box putDishNo"></div>
                     </div>
                     <div class="same_data">
-                        <div class="same_box">Ashish</div>
-                        <div class="same_box">Ashish</div>
+                        <div class="same_box putDishName"></div>
+                        <div class="same_box putDishNo"></div>
                     </div>
                     <div class="same_data">
-                        <div class="same_box">Ashish</div>
-                        <div class="same_box">Ashish</div>
+                        <div class="same_box putDishName"></div>
+                        <div class="same_box putDishNo"></div>
                     </div>
                     <div class="same_data">
-                        <div class="same_box">Ashish</div>
-                        <div class="same_box">Ashish</div>
+                        <div class="same_box putDishName"></div>
+                        <div class="same_box putDishNo"></div>
                     </div>
                     <div class="same_data">
-                        <div class="same_box">Ashish</div>
-                        <div class="same_box">Ashish</div>
+                        <div class="same_box putDishName"></div>
+                        <div class="same_box putDishNo"></div>
+                    </div>
+                    <div class="same_data">
+                        <div class="same_box putDishName"></div>
+                        <div class="same_box putDishNo"></div>
+                    </div>
+                    <div class="same_data">
+                        <div class="same_box putDishName"></div>
+                        <div class="same_box putDishNo"></div>
                     </div>
                 </div>
            </div>
