--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class="box_two">
                         <label for="selectSer">Please Enter No of Servings</label>
-                        <input type="number" name="serSelect" id="selectSer" class="selectSers"> 
+                        <input type="number" name="serSelect" id="selectSer" class="selectSers" min="1" max="5" value=""> 
                     </div>
                     <br>
                 </div>
