--- a/main_file.html
+++ b/main_file.html
@@ -50,7 +50,9 @@
             <div class="container">
                 <div class="flexible">
                     <div class="navigation_bar-logo">
-                        <img src="./images/icon_white.svg" alt="mainicon">
+                        <a href="#">
+                            <img src="./images/icon_white.svg" alt="mainicon">
+                        </a>
                     </div>
                     <nav>
                         <ul>
@@ -70,8 +72,10 @@
         <div class="home_banner">
             <div class="container">
                 <img src="./images/slider2-icon.png" alt="slider_icon">
-                <h1>ashish restaurant</h1>
+                <div>
+                    <h1>ashish restaurant</h1>
                 <h2><span>tasty</span>.<span>delicious</span>.<span>savoury</span></h2>
+                </div>
             </div>
         </div>
     </div>
@@ -82,12 +86,12 @@
                 <div class="col-md-6">
                     <img src="./images/ourstory_bg.jpg" alt="storybg" class="w-100">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 my-auto">
                     <p>discover</p>
                     <h1>our story</h1>
                     <h5>we have the glory begining restaurant business</h5>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis voluptatibus dolore nihil, sequi quasi quae delectus autem, qui aperiam repudiandae corporis rem assumenda, corrupti veritatis. Quisquam, dolor reprehenderit!</p>
-                    <a href="#">about us</a>
+                    <div class="btn"><a href="#">about us</a></div>
                 </div>
             </div>
         </div>
